Fix plans layout on smaller screens

--- a/projects/DigitPop-CMS/src/app/subscription-plans/subscription-plans.component.scss
+++ b/projects/DigitPop-CMS/src/app/subscription-plans/subscription-plans.component.scss
@@ -21,6 +21,10 @@
 }
 
 @media only screen and (min-width: 1024px) {
+  .pricing {
+    flex-wrap: nowrap;
+  }
+
   .card {
     max-width: 420px;
     width: 32%;
